--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 
-# Created by https://www.gitignore.io/api/swift
+# Created by https://www.gitignore.io/api/swift,cocoapods
+
+### CocoaPods ###
+## CocoaPods GitIgnore Template
+
+# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
+#           - Also handy if you have a lage number of dependant pods
+#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGONRE THE LOCK FILE
+Pods/
 
 ### Swift ###
 # Xcode
@@ -59,4 +67,4 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 
-# End of https://www.gitignore.io/api/swift
+# End of https://www.gitignore.io/api/swift,cocoapods
